upgraded ES to v 2.1
and other stuff